fix little bug
